# docs/swagger.json
@@ -9,57 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/tasks": {
-            "get": {
-                "description": "Retrieves a list of tasks for a user",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "tasks"
-                ],
-                "summary": "Get Tasks",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "List of tasks",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/database.Task"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid user ID",
-                        "schema": {
-                            "$ref": "#/definitions/routers.Response"
-                        }
-                    },
-                    "404": {
-                        "description": "Tasks not found",
-                        "schema": {
-                            "$ref": "#/definitions/routers.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "Failed to get tasks",
-                        "schema": {
-                            "$ref": "#/definitions/routers.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/tasks/{id}/start": {
+        "/tasks/start/{id}": {
             "post": {
                 "description": "Starts a task for a user",
                 "produces": [
@@ -100,6 +50,12 @@
                             "$ref": "#/definitions/routers.Response"
                         }
                     },
+                    "404": {
+                        "description": "User not found",
+                        "schema": {
+                            "$ref": "#/definitions/routers.Response"
+                        }
+                    },
                     "409": {
                         "description": "Task already started",
                         "schema": {
@@ -115,7 +71,7 @@
                 }
             }
         },
-        "/tasks/{id}/stop": {
+        "/tasks/stop/{id}": {
             "post": {
                 "description": "Stops a task for a user",
                 "produces": [
@@ -164,6 +120,56 @@
                     },
                     "500": {
                         "description": "Failed to stop task",
+                        "schema": {
+                            "$ref": "#/definitions/routers.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/tasks/{id}": {
+            "get": {
+                "description": "Retrieves a list of tasks for a user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Get Tasks",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of tasks",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/database.Task"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid user ID",
+                        "schema": {
+                            "$ref": "#/definitions/routers.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Tasks not found",
+                        "schema": {
+                            "$ref": "#/definitions/routers.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to get tasks",
                         "schema": {
                             "$ref": "#/definitions/routers.Response"
                         }
@@ -258,11 +264,60 @@
                     }
                 }
             },
-            "put": {
-                "description": "Updates a user by ID",
+            "post": {
+                "description": "Add a new user to the database using passport series and number",
                 "consumes": [
                     "application/json"
                 ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Add a new user",
+                "parameters": [
+                    {
+                        "description": "Passport number",
+                        "name": "passportNumber",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/routers.Passport"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "User added successfully",
+                        "schema": {
+                            "$ref": "#/definitions/routers.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request payload, Invalid passport number",
+                        "schema": {
+                            "$ref": "#/definitions/routers.Response"
+                        }
+                    },
+                    "409": {
+                        "description": "User already exists",
+                        "schema": {
+                            "$ref": "#/definitions/routers.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to fetch user data from external API, Failed to add user to the database",
+                        "schema": {
+                            "$ref": "#/definitions/routers.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{id}": {
+            "put": {
+                "description": "Updates a user by ID",
                 "produces": [
                     "application/json"
                 ],
@@ -309,56 +364,6 @@
                     },
                     "500": {
                         "description": "Failed to update user",
-                        "schema": {
-                            "$ref": "#/definitions/routers.Response"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Add a new user to the database using passport series and number",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Add a new user",
-                "parameters": [
-                    {
-                        "description": "Passport number",
-                        "name": "passportNumber",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/routers.Passport"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "User added successfully",
-                        "schema": {
-                            "$ref": "#/definitions/routers.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Invalid request payload, Invalid passport number",
-                        "schema": {
-                            "$ref": "#/definitions/routers.Response"
-                        }
-                    },
-                    "409": {
-                        "description": "User already exists",
-                        "schema": {
-                            "$ref": "#/definitions/routers.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "Failed to fetch user data from external API, Failed to add user to the database",
                         "schema": {
                             "$ref": "#/definitions/routers.Response"
                         }
